[package]
name = "actr-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Configuration file parser and project manifest support for Actor-RTC framework"
license.workspace = true
repository.workspace = true

[dependencies]
# Protocol definitions (local path)
actr-protocol = { path = "../protocol", version = "0.1" }

# Version management (local path)
actr-version = { path = "../version", version = "0.1" }

# Serialization and configuration parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"

# URL handling for proto dependencies
url = "2.5"

# Time handling for lock files
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# JSON serialization for tests
serde_json = "1.0"
tempfile = "3.23"
