[package]
name = "actr-framework-protoc-codegen"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Protoc plugin for generating actr-framework code from protobuf definitions"
keywords = ["actor", "codegen", "protobuf", "protoc", "plugin"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
# Framework dependencies
actr-framework = { path = "../framework", version = "0.1" }
actr-protocol = { path = "../protocol", version = "0.1" }

# Protobuf support
prost = "0.14"
prost-types = "0.14"
bytes = "1.10"

# Code generation
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[[bin]]
name = "protoc-gen-actrframework"
path = "src/bin/protoc-gen-actrframework.rs"

[lib]
name = "actr_framework_protoc_codegen"
path = "src/lib.rs"
