[package]
name = "actr-framework"
version = "0.1.3"
edition = "2024"
description = "Actor-RTC framework core (stub for code generation testing)"
license = "Apache-2.0"
repository = "https://github.com/actor-rtc/actr"

[dependencies]
actr-protocol.workspace = true
async-trait = "0.1"
bytes = "1.10"
futures-util = "0.3"
tokio.workspace = true
uuid = { version = "1.18", features = ["v4"] }

# Optional dependencies for utilities
anyhow = "1.0"
tracing = "0.1"
maxminddb = { version = "0.24", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
flate2 = { version = "1.1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = []
geoip = [
    "maxminddb",
    "reqwest",
    "flate2",
    "tar",
] # GeoIP with auto-download support
