[package]
name = "actr-protocol"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Unified protocol, types, and URI parsing for Actor-RTC framework"
repository = "https://github.com/actor-rtc/actr"
keywords = ["actor", "protobuf", "types", "protocol", "uri"]
readme = "README.md"

[dependencies]
# Protocol buffer support (using prost with proto2)
prost = "0.14.1"
prost-types = "0.14.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = { workspace = true }

# Bytes handling (zero-copy for protobuf bytes fields)
bytes = "1.10"

# Base122 encoding for TURN username
base122 = { package = "base122-rs", version = "0.1.4" }

# Time and UUID for signaling protocol
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[build-dependencies]
# Protocol buffer compilation (using prost-build)
prost-build = "0.14.1"
glob = "0.3"
