[package]
name = "echo-client"
version = "0.1.0"
edition = "2021"
authors = ["Actor-RTC Framework Contributors"]
description = "Echo client demo for Actor-RTC Framework"

[dependencies]
actor-rtc-framework = { path = "../../actor-rtc-framework" }
shared-protocols = { path = "../../shared-protocols" }

# Workspace dependencies - copied from root workspace
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
prost = "0.12"
tonic = { version = "0.10", features = ["tls"] }

[build-dependencies]
tonic-build = "0.10"