[package]
name = "actr-error-fixture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal fixture server for binding error-mapping integration tests"
publish = false

[[bin]]
name = "error-fixture"
path = "src/main.rs"

[dependencies]
actr-mock-actrix = { workspace = true }
actr-protocol = { workspace = true }
actr-config = { workspace = true }
actr-framework = { workspace = true }
actr-hyper = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
